# KaleMath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/Kale/Docs/: MainPage.cpp
src/Kale/Math/Matrix/: Matrix.hpp
src/Kale/Math/Ray/: Ray.cpp
src/Kale/Math/Transform/: Transform.cpp
src/Kale/Math/Vector/: Vector.hpp
